# DemoLvgl

./: CMakeLists.txt
scripts/: gen_wl_protocols.sh
src/: examples.c  examples.h  lv_conf.h  main.c
